fix: security vulnerabilities
* feat: Infinite scroll and ajax filter sort with toggle
* feat: DPR tab with toggle
* fix: build warnings
* fix all security vulnerabilities
* fix: do not show pointer cursor if drilldowns not supported
* ui: update "thank you for your feedback" message

--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -16,8 +16,13 @@
   height: 100%;
   color: var(--react-autoql-text-color-primary);
 
+  a {
+    color: var(--react-autoql-accent-color);
+  }
+
   .query-output-error-message,
-  .no-columns-error-message {
+  .no-columns-error-message,
+  .feedback-message {
     margin: auto;
   }
 }
