--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -1,7 +1,16 @@
 .chat-single-message-container {
   transition: background-color 0.2s ease;
   padding-top: 6px;
-  max-height: 85%;
+
+  a {
+    text-decoration: none;
+    font-weight: 600;
+    color: var(--react-autoql-accent-color);
+  }
+
+  &:not(.no-max-height) {
+    max-height: 85%;
+  }
 
   &:first-of-type {
     margin-top: 10px;
@@ -164,6 +173,13 @@
 .chart-icon-svg-0,
 .react-autoql-icon-svg-0 {
   fill: currentColor;
+}
+.react-autoql-icon-outlined {
+  fill: none;
+  stroke: currentColor;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-miterlimit: 10;
 }
 .hm0 {
   opacity: 0.5;
